@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0

class ClinicalAnalysisLaboratory{
    -idLaboratory
    -name
    -address
    -phoneNumber
    -tin
    -testType
}

class Platform{
    -designation
}

class Employee{
    -name
    -function
    -phoneNumber
    -email
    -address
}

class Administrator{
    -idEmployee
    -soc
}

class ParametersCategory{
    -code
    -name
}

class Parameter{
    -code
    -name
    -description
}


ClinicalAnalysisLaboratory "1" -- "*" Parameter : capable of analysing >
ParametersCategory "*" -- "1" Administrator : created by >
Administrator "1" -- "*" Employee : is >
ClinicalAnalysisLaboratory "1" -- "*" ParametersCategory : adopts >
Administrator "1" -- "*" Parameter : create >
Parameter "*" -- "1" ParametersCategory : presented under >
Employee "*" -- "1" Platform : uses >
@enduml